# django-pita

./: MANIFEST.in  README.md  pyproject.toml
src/pita/: api.py  models.py  utils.py
tests/: models.py  tests.py
